--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>zfvcdck</h1>
+    <header>
+    <h1>Blohastu okun marketplace</h1>
+    <div id="cart"></div>
+    <button id="cart-button" onclick="openCart()">
+    <img src="" alt="">
+    </button>
+</header>
 </body>
 </html>
