--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <header>
     <h1>Blohastu okun marketplace</h1>
-    <div id="cart"></div>
+    <div id="cart">
     <button id="cart-button" onclick="openCart()">
-    <img src="" alt="">
+    <img src="cart.png" alt="okun">
     </button>
+    <div id="cart=products" class="hide">
+        Car is empty
+    </div>
+</div>
 </header>
 </body>
 </html>
