--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     <button id="cart-button" onclick="openCart()">
     <img src="cart.png" alt="okun">
     </button>
-    <div id="cart=products" class="hide">
+    
+    <div id="cart-products" class="hide">
         Car is empty
     </div>
 </div>
 </header>
+<main>
+    <div id="products-grid">
+        
+    </div>
+</main>
 </body>
 </html>
