--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Robocode Marketplace</h1>
+        <h1>Kapybara Marketplace</h1>
         <nav>
             <a class="products-link" href="index.html">Products</a>
         </nav>
