--- a/index.html
+++ b/index.html
@@ -2,28 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin page</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-    <h1>Blohastu okun marketplace</h1>
-    <div id="cart">
-    <button id="cart-button" onclick="openCart()">
-    <img src="cart.png" alt="okun">
-    </button>
-    
-    <div id="cart-products" class="hide">
-        Car is empty
-    </div>
-</div>
-</header>
-<main>
-    <div id="products-grid">
-        
-    </div>
-</main>
+        <h1>Robocode Marketplace</h1>
+        <nav>
+            <a class="products-link" href="index.html">Products</a>
+        </nav>
+    </header>
+    <main>
+        <div class="add_product">
+            <form id="add_product_form">
+                  <div class="form-group">
+                    <label>Name: </label><input class="form-control" name="name" type="text" required>
+                  </div>
+                  <div class="form-group">
+                    <label>Description: </label><textarea class="form-control" name="description" type="text"></textarea>
+                  </div>
+                  <div class="form-group">
+                    <label>Price: </label><input class="form-control" name="price" data-type="money" type="text" required>
+                  </div>
+                  <div class="form-group">
+                    <label>Photo url: </label><input class="form-control" name="photo_url" type="text">
+                  </div>
+                <input type="submit" >
+            </form>
+        </div>
+    </main>
 </body>
+<script src="admin.js"></script>
 </html>
