--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="admin_page_link" href="admin.html">Check out Admin Page</a>
             <div id="cart">
             <button id="cart-button" onclick="openCart()">
-                <img src="img/cart.png" alt="cart" />
+                <img src="cart.png" alt="cart" />
             </button>
             <div id="cart-products" class="hide">Cart is empty</div>
             </div>
