--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
         
     </div>
 </main>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        Hello world
+    </div>
+</div>
 </body>
 </html>
