--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
 </main>
 <div id="myModal" class="modal">
     <div class="modal-content">
-        Hello world
+    <span class="close">&times;</span>
+    <div id="order-block">
+    </div>
+    <form id="order-form">
+        <input type="text" name="name" placeholder="Full Name" required>
+        <input type="text" name="address" placeholder="Delivery Address" required>
+        <input type="tel" name="phone" placeholder="Phone Number" required>
+        <input type="number" name="post_number" placeholder="Post Office Number" required>
+        <h2>Total Price: <span id="price"></span></h2>
+        <input type="submit" value="Order">
+    </form>
     </div>
 </div>
 </body>
